public/css/landing/style.css
/* ... */
.hero__action-copy-command-button {
  background: var(--button-background-color-dark);
  border-radius: 6px;
  border: 1px solid var(--button-border-color);
  box-shadow: inset 0 -4px 0 var(--button-border-color);
  color: var(--text-color-light);
  font-family: var(--font-family-code);
  font-size: var(--font-size-h7);
  font-weight: 600;
  line-height: var(--line-height-h7);
  padding: 12px 0;
  position: absolute;
  right: -6px;
  top: -2px;
  width: 100%;
  max-width: 145px;
}

.hero__action-copy-command-button.active {
  background: var(--button-background-color-light);
  border: 1px solid var(--button-border-color);
  box-shadow: inset 0 -4px 0 var(--button-border-color);
  color: var(--text-color);
}

.hero__action-copy-command-button:hover {
  background: var(--button-background-color-light);
  border: 1px solid var(--button-border-color);
  box-shadow: inset 0 -4px 0 var(--button-border-color);
  color: var(--text-color);
  cursor: pointer;
  transition: 0.3s ease-in-out;
  will-change: background, color, border, box-shadow;
}

.hero__action-button--get-started {
  background: var(--button-background-color-light);
  border-radius: 6px;
  border: 1px solid var(--button-border-color);
  box-shadow: inset 0 -4px 0 var(--button-box-shadow);
  color: var(--text-color);
  font-family: var(--font-family-code);
  font-feature-settings: 'salt'on;
  font-size: var(--font-size-h7);
  font-weight: 600;
  line-height: var(--line-height-h7);
  padding: 12px 20px;
  text-decoration: none;
}

.hero__action-button--get-started:hover {
  background: var(--button-background-color-dark);
  border: 1px solid var(--button-border-color);
  box-shadow: inset 0 -4px 0 var(--button-border-color);
  color: var(--text-color-light);
  cursor: pointer;
  transition: 0.4s ease-in-out;
  will-change: background, color, border, box-shadow;
}

.hero__play-button {
  align-items: center;
  background-color: transparent;
  border: 0;
  cursor: pointer;
  display: flex;
  height: 100%;
  justify-content: center;
  overflow: hidden;
  position: absolute;
  top: 0;
  width: 100%;
}

.hero__play-button__icon {
  height: 145px;
  min-height: 145px;
  min-width: 145px;
  width: 145px;
}

.hero__companies {
  background: var(--background-color);
  display: flex;
  flex-direction: column;
  margin: auto;
  --layout-content-width: 800px;
  max-width: min(var(--layout-content-width), 82vw);
  padding: 35px 0;
  width: 100%;
}

.hero__companies__text {
  color: var(--text-color);
  font-size: var(--font-size-h5);
  font-weight: 600;
  line-height: var(--line-height-h5);
  text-align: center;
}

.hero__companies__logos {
  align-items: center;
  display: flex;
  justify-content: space-between;
  padding-top: 20px;
}

.hero__companies__logos img {
  width: 100%;
  height: 100%;
  min-width: 0;
  scale: 0.8;
}

.hero__companies__logos img:first-child {
  align-self: self-end;
}

@media (max-width: 1024px) {
  .hero__sub-heading {
    max-width: 37rem;
  }

  .hero__action {
    margin-top: 56px;
  }

  .hero__action-copy-command-button {
    font-weight: 500;
  }

  .hero__companies {
    padding: 20px 0;

  }

  .hero__companies__text {
    font-size: var(--font-size-h7-mega);
    line-height: var(--line-height-h7-mega);
  }

  .hero__companies__logos {
    padding-top: 28px;
  }
}

@media (max-width: 480px) {
  .navigation {
    height: 7.5vh;
  }

  .navigation__logo svg{
    height: 30px;
    width: 100%;
    max-width: 145px;
  }

  #docsearch, #docsearch button span.DocSearch-Button-Container{
    height: 20px;
    width: 20px;
    scale: 0.9;
  }

  .navigation-list.social #docsearch .DocSearch.DocSearch-Button {
    height: 20px;
    width: 20px;
  }

  .hero__content {
    gap: 12px;
  }

  .hero {
    padding-top: 30px;
  }

  .hero__heading {
    line-height: var(--line-height-h4-s);
  }

  .hero__sub-heading {
    line-height: var(--line-height-base);
  }

  .hero__action {
    margin-top: 28px;
    margin-bottom: unset;
    gap: 20px;
    padding: 0 40px;
    flex-wrap: nowrap;
    flex-direction: column;
  }

  .hero__action-copy-command {
    padding: 10px 12px;
    border-radius: 3px;
    border-width: 1.5px;
  }

  .hero__action-copy-command-text {
    font-size: var(--font-size-h7);
    line-height: var(--line-height-h7);
    display: flex;
  }

  .hero__action-copy-command-button {
    font-weight: 500;
    padding: 11px 0px;
    width: min(24vw, 7rem);
    max-width: 100%;
    border-radius: 4px;
    right: -3px;
  }

  .hero__action-copy-command-button:hover {
    background: var(--button-background-color-dark);
    color: var(--text-color-light);
  }

  .hero__action-copy-command-button.active {
    background: var(--button-background-color-light);
    color: var(--text-color);
  }

  .hero__action-button--get-started {
    text-align: center;
    padding: 12px;
    font-size: var(--font-size-base);
    font-weight: 500;
    line-height: var(--line-height-base);
  }

  .hero__companies {
    padding: 44px 0;
    --layout-content-width: 400px;
    max-width: min(var(--layout-content-width), 84%);
  }

  .hero__companies__text {
    font-size: var(--font-size-h7);
    line-height: var(--line-height-h7);
  }

  .hero__companies__logos {
    width: 80vw;
    margin: auto;
  }

  .hero__companies__logos img {
    width: 100%;
    height: 4.1vh;
    scale: 1;
  }

  .hero__companies__logos img:first-child {
    position: relative;
    bottom: -4px;
  }

  .hero__companies__logos img:nth-child(3) {
    display: none;
  }
}


@media (max-width: 444px) {
  .hero__action-copy-command-text {
    font-size: var(--font-size-h8);
  }

  .hero__action-copy-command-button {
    font-size: var(--font-size-h8);
  }

  .hero__action {
    padding: 0 24px;
  }

  .hero__action-copy-command-text::before {
    padding-right: 12px;
  }
}
/* ... */

